# skillhub

./: .gitignore  README-zh-TW.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-security-and-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md
scripts/: bump-version.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: install.rs  mod.rs  settings.rs  skills.rs  sources.rs  sync_cmd.rs  upload.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/mcp/: mod.rs  router.rs  tools.rs
src-tauri/src/remote/: gdrive.rs  gitlab.rs  mod.rs  oauth.rs
src-tauri/src/scanner/: frontmatter.rs  mod.rs
src-tauri/src/services/: install.rs  mod.rs  skills.rs  sources.rs  sync.rs  token_store.rs  upload.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: AddSourceDialog.tsx  AgentIcons.tsx  ConfirmDeleteSourceDialog.tsx  Layout.tsx  RemoteSkillCard.tsx  RemoteSkillModal.tsx  SearchBar.tsx  SettingsGeneral.tsx  Sidebar.tsx  SkillCard.tsx  SkillGrid.tsx  SkillModal.tsx  UpdateTokenDialog.tsx
src/lib/: error.ts  i18n.ts  tauri.ts
src/styles/: globals.css
src/test/: setup.ts
(+4 files in other folders)
